95/bisontestingagain/bison.output
Terminals unused in grammar

   GREATER_GREATER_EQUAL
   LESS_LESS_EQUAL


Rules useless in parser due to conflicts

  114 declaration_specifiers_opt: declaration_specifiers


State 10 conflicts: 3 shift/reduce
State 136 conflicts: 2 shift/reduce
State 141 conflicts: 1 shift/reduce
State 223 conflicts: 1 shift/reduce
State 275 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 abstract_declarator: pointer
    2                    | pointer_opt direct_abstract_declarator

    3 additive_expr: multiplicative_expr
    4              | additive_expr add_op multiplicative_expr

    5 add_op: PLUS
    6       | MINUS

    7 address_expr: AMPERSAND cast_expr

    8 array_declarator: direct_declarator LEFT_SQUARE constant_expr_opt RIGHT_SQUARE

    9 assignment_expr: conditional_expr
   10                | unary_expr assignment_op assignment_expr

   11 assignment_op: EQUAL
   12              | PLUS_EQUAL
   13              | MINUS_EQUAL
   14              | ASTERISK_EQUAL
   15              | SLASH_EQUAL
   16              | PERCENT_EQUAL
   17              | LESS_EQUAL
   18              | GREATER_EQUAL
   19              | AMPERSAND_EQUAL
   20              | CARET_EQUAL
   21              | VBAR_EQUAL

   22 bitwise_and_expr: equality_expr
   23                 | bitwise_and_expr AMPERSAND equality_expr

   24 bitwise_negation_expr: TILDE cast_expr

   25 bitwise_or_expr: bitwise_xor_expr
   26                | bitwise_or_expr VBAR bitwise_xor_expr

   27 bitwise_xor_expr: bitwise_and_expr
   28                 | bitwise_xor_expr CARET bitwise_and_expr

   29 break_statement: BREAK SEMICOLON

   30 cast_expr: unary_expr
   31          | LEFT_PAREN type_name RIGHT_PAREN cast_expr

   32 character_type_specifier: CHAR
   33                         | SIGNED CHAR
   34                         | UNSIGNED CHAR

   35 comma_expr: assignment_expr
   36           | comma_expr COMMA assignment_expr

   37 compound_statement: LEFT_CURLY declaration_or_statement_list_opt RIGHT_CURLY

   38 conditional_expr: logical_or_expr
   39                 | logical_or_expr QUESTION expr COLON conditional_expr

   40 conditional_statement: if_statement
   41                      | if_else_statement

   42 constant: integer_constant
   43         | character_constant
   44         | string_constant

   45 constant_expr: conditional_expr

   46 continue_statement: CONTINUE SEMICOLON

   47 decl: declaration_specifiers initialized_declarator_list SEMICOLON

   48 declaration_or_statement: decl
   49                         | statement

   50 declaration_or_statement_list: declaration_or_statement
   51                              | declaration_or_statement_list declaration_or_statement

   52 declaration_specifiers: type_specifier

   53 declarator: pointer_declarator
   54           | direct_declarator

   55 direct_abstract_declarator: LEFT_PAREN abstract_declarator RIGHT_PAREN
   56                           | direct_abstract_declarator_opt LEFT_SQUARE constant_expr_opt RIGHT_SQUARE

   57 direct_declarator: simple_declarator
   58                  | LEFT_PAREN declarator RIGHT_PAREN
   59                  | function_declarator
   60                  | array_declarator

   61 do_statement: DO statement WHILE LEFT_PAREN expr RIGHT_PAREN SEMICOLON

   62 equality_expr: relational_expr
   63              | equality_expr equality_op relational_expr

   64 equality_op: EQUAL_EQUAL
   65            | EXCLAMATION_EQUAL

   66 expr: comma_expr

   67 expression_list: assignment_expr
   68                | expression_list COMMA assignment_expr

   69 expression_statement: expr SEMICOLON

   70 for_expr: LEFT_PAREN initial_clause_opt SEMICOLON expr_opt SEMICOLON expr_opt RIGHT_PAREN

   71 for_statement: FOR for_expr statement

   72 function_call: postfix_expr LEFT_PAREN expression_list_opt RIGHT_PAREN

   73 function_declarator: direct_declarator LEFT_PAREN parameter_type_list RIGHT_PAREN

   74 function_definition: function_def_specifier compound_statement

   75 function_def_specifier: declaration_specifiers_opt declarator

   76 goto_statement: GOTO named_label SEMICOLON

   77 if_else_statement: IF LEFT_PAREN expr RIGHT_PAREN statement ELSE statement

   78 if_statement: IF LEFT_PAREN expr RIGHT_PAREN statement

   79 indirection_expr: ASTERISK cast_expr

   80 initial_clause: expr

   81 initialized_declarator: declarator

   82 initialized_declarator_list: initialized_declarator
   83                            | initialized_declarator_list COMMA initialized_declarator

   84 integer_type_specifier: signed_type_specifier
   85                       | unsigned_type_specifier
   86                       | character_type_specifier

   87 iterative_statement: while_statement
   88                    | do_statement
   89                    | for_statement

   90 label: named_label

   91 labeled_statement: label COLON statement

   92 logical_and_expr: bitwise_or_expr
   93                 | logical_and_expr AMPERSAND_AMPERSAND bitwise_or_expr

   94 logical_negation_expr: EXCLAMATION cast_expr

   95 logical_or_expr: logical_and_expr
   96                | logical_or_expr VBAR_VBAR logical_and_expr

   97 multiplicative_expr: cast_expr
   98                    | multiplicative_expr mult_op cast_expr

   99 mult_op: ASTERISK
  100        | SLASH
  101        | PERCENT

  102 named_label: IDENTIFIER

  103 null_statement: SEMICOLON

  104 parameter_decl: declaration_specifiers declarator
  105               | declaration_specifiers abstract_declarator_opt

  106 abstract_declarator_opt: /* empty */
  107                        | abstract_declarator

  108 character_constant: CHAR_CONSTANT

  109 constant_expr_opt: /* empty */
  110                  | constant_expr

  111 declaration_or_statement_list_opt: /* empty */
  112                                  | declaration_or_statement_list

  113 declaration_specifiers_opt: /* empty */
  114                           | declaration_specifiers

  115 direct_abstract_declarator_opt: /* empty */
  116                               | direct_abstract_declarator

  117 expr_opt: /* empty */
  118         | expr

  119 expression_list_opt: /* empty */
  120                    | expression_list

  121 initial_clause_opt: /* empty */
  122                   | initial_clause

  123 int_t_opt: /* empty */
  124          | INT

  125 integer_constant: NUMBER

  126 pointer_opt: /* empty */
  127            | pointer

  128 string_constant: STRING

  129 parameter_list: parameter_decl
  130               | parameter_list COMMA parameter_decl

  131 parameter_type_list: parameter_list

  132 parenthesized_expr: LEFT_PAREN expr RIGHT_PAREN

  133 pointer: ASTERISK
  134        | ASTERISK pointer

  135 pointer_declarator: pointer direct_declarator

  136 postdecrement_expr: postfix_expr MINUS_MINUS

  137 postfix_expr: primary_expr
  138             | subscript_expr
  139             | function_call
  140             | postincrement_expr
  141             | postdecrement_expr

  142 postincrement_expr: postfix_expr PLUS_PLUS

  143 predecrement_expr: MINUS_MINUS unary_expr

  144 preincrement_expr: PLUS_PLUS unary_expr

  145 primary_expr: IDENTIFIER
  146             | constant
  147             | parenthesized_expr

  148 relational_expr: shift_expr
  149                | relational_expr relational_op shift_expr

  150 relational_op: LESS
  151              | LESS_EQUAL
  152              | GREATER
  153              | GREATER_EQUAL

  154 return_statement: RETURN expr_opt SEMICOLON

  155 shift_expr: additive_expr
  156           | shift_expr shift_op additive_expr

  157 shift_op: LESS_LESS
  158         | GREATER_GREATER

  159 signed_type_specifier: SHORT
  160                      | SHORT INT
  161                      | SIGNED SHORT
  162                      | SIGNED SHORT INT
  163                      | INT
  164                      | SIGNED INT
  165                      | SIGNED
  166                      | LONG
  167                      | LONG INT
  168                      | SIGNED LONG
  169                      | SIGNED LONG INT

  170 simple_declarator: IDENTIFIER

  171 statement: expression_statement
  172          | labeled_statement
  173          | compound_statement
  174          | conditional_statement
  175          | iterative_statement
  176          | break_statement
  177          | continue_statement
  178          | return_statement
  179          | goto_statement
  180          | null_statement

  181 subscript_expr: postfix_expr LEFT_SQUARE expr RIGHT_SQUARE

  182 top_level_decl: decl
  183               | function_definition

  184 translation_unit: top_level_decl
  185                 | translation_unit top_level_decl

  186 type_name: declaration_specifiers abstract_declarator_opt

  187 type_specifier: integer_type_specifier
  188               | void_type_specifier

  189 unary_expr: postfix_expr
  190           | unary_minus_expr
  191           | unary_plus_expr
  192           | logical_negation_expr
  193           | bitwise_negation_expr
  194           | address_expr
  195           | indirection_expr
  196           | preincrement_expr
  197           | predecrement_expr

  198 unary_minus_expr: MINUS cast_expr

  199 unary_plus_expr: PLUS cast_expr

  200 unsigned_type_specifier: UNSIGNED SHORT int_t_opt
  201                        | UNSIGNED int_t_opt
  202                        | UNSIGNED LONG int_t_opt

  203 void_type_specifier: VOID

  204 while_statement: WHILE LEFT_PAREN expr RIGHT_PAREN statement


Terminals, with rules where they appear

$end (0) 0
error (256)
IDENTIFIER (258) 102 145 170
STRING (259) 128
CHAR_CONSTANT (260) 108
BREAK (261) 29
CHAR (262) 32 33 34
CONTINUE (263) 46
DO (264) 61
ELSE (265) 77
FOR (266) 71
GOTO (267) 76
IF (268) 77 78
INT (269) 124 160 162 163 164 167 169
LONG (270) 166 167 168 169 202
RETURN (271) 154
SHORT (272) 159 160 161 162 200
SIGNED (273) 33 161 162 164 165 168 169
UNSIGNED (274) 34 200 201 202
VOID (275) 203
WHILE (276) 61 204
LEFT_PAREN (277) 31 55 58 61 70 72 73 77 78 132 204
RIGHT_PAREN (278) 31 55 58 61 70 72 73 77 78 132 204
LEFT_SQUARE (279) 8 56 181
RIGHT_SQUARE (280) 8 56 181
LEFT_CURLY (281) 37
RIGHT_CURLY (282) 37
AMPERSAND (283) 7 23
ASTERISK (284) 79 99 133 134
CARET (285) 28
COLON (286) 39 91
COMMA (287) 36 68 83 130
EQUAL (288) 11
EXCLAMATION (289) 94
GREATER (290) 152
LESS (291) 150
MINUS (292) 6 198
PERCENT (293) 101
PLUS (294) 5 199
SEMICOLON (295) 29 46 47 61 69 70 76 103 154
SLASH (296) 100
QUESTION (297) 39
TILDE (298) 24
VBAR (299) 26
AMPERSAND_AMPERSAND (300) 93
AMPERSAND_EQUAL (301) 19
ASTERISK_EQUAL (302) 14
CARET_EQUAL (303) 20
EQUAL_EQUAL (304) 64
EXCLAMATION_EQUAL (305) 65
GREATER_EQUAL (306) 18 153
GREATER_GREATER (307) 158
GREATER_GREATER_EQUAL (308)
LESS_EQUAL (309) 17 151
LESS_LESS (310) 157
LESS_LESS_EQUAL (311)
MINUS_EQUAL (312) 13
MINUS_MINUS (313) 136 143
PERCENT_EQUAL (314) 16
PLUS_EQUAL (315) 12
PLUS_PLUS (316) 142 144
SLASH_EQUAL (317) 15
VBAR_EQUAL (318) 21
VBAR_VBAR (319) 96
NUMBER (320) 125


Nonterminals, with rules where they appear

$accept (66)
    on left: 0
abstract_declarator (67)
    on left: 1 2, on right: 55 107
additive_expr (68)
    on left: 3 4, on right: 4 155 156
add_op (69)
    on left: 5 6, on right: 4
address_expr (70)
    on left: 7, on right: 194
array_declarator (71)
    on left: 8, on right: 60
assignment_expr (72)
    on left: 9 10, on right: 10 35 36 67 68
assignment_op (73)
    on left: 11 12 13 14 15 16 17 18 19 20 21, on right: 10
bitwise_and_expr (74)
    on left: 22 23, on right: 23 27 28
bitwise_negation_expr (75)
    on left: 24, on right: 193
bitwise_or_expr (76)
    on left: 25 26, on right: 26 92 93
bitwise_xor_expr (77)
    on left: 27 28, on right: 25 26 28
break_statement (78)
    on left: 29, on right: 176
cast_expr (79)
    on left: 30 31, on right: 7 24 31 79 94 97 98 198 199
character_type_specifier (80)
    on left: 32 33 34, on right: 86
comma_expr (81)
    on left: 35 36, on right: 36 66
compound_statement (82)
    on left: 37, on right: 74 173
conditional_expr (83)
    on left: 38 39, on right: 9 39 45
conditional_statement (84)
    on left: 40 41, on right: 174
constant (85)
    on left: 42 43 44, on right: 146
constant_expr (86)
    on left: 45, on right: 110
continue_statement (87)
    on left: 46, on right: 177
decl (88)
    on left: 47, on right: 48 182
declaration_or_statement (89)
    on left: 48 49, on right: 50 51
declaration_or_statement_list (90)
    on left: 50 51, on right: 51 112
declaration_specifiers (91)
    on left: 52, on right: 47 104 105 114 186
declarator (92)
    on left: 53 54, on right: 58 75 81 104
direct_abstract_declarator (93)
    on left: 55 56, on right: 2 116
direct_declarator (94)
    on left: 57 58 59 60, on right: 8 54 73 135
do_statement (95)
    on left: 61, on right: 88
equality_expr (96)
    on left: 62 63, on right: 22 23 63
equality_op (97)
    on left: 64 65, on right: 63
expr (98)
    on left: 66, on right: 39 61 69 77 78 80 118 132 181 204
expression_list (99)
    on left: 67 68, on right: 68 120
expression_statement (100)
    on left: 69, on right: 171
for_expr (101)
    on left: 70, on right: 71
for_statement (102)
    on left: 71, on right: 89
function_call (103)
    on left: 72, on right: 139
function_declarator (104)
    on left: 73, on right: 59
function_definition (105)
    on left: 74, on right: 183
function_def_specifier (106)
    on left: 75, on right: 74
goto_statement (107)
    on left: 76, on right: 179
if_else_statement (108)
    on left: 77, on right: 41
if_statement (109)
    on left: 78, on right: 40
indirection_expr (110)
    on left: 79, on right: 195
initial_clause (111)
    on left: 80, on right: 122
initialized_declarator (112)
    on left: 81, on right: 82 83
initialized_declarator_list (113)
    on left: 82 83, on right: 47 83
integer_type_specifier (114)
    on left: 84 85 86, on right: 187
iterative_statement (115)
    on left: 87 88 89, on right: 175
label (116)
    on left: 90, on right: 91
labeled_statement (117)
    on left: 91, on right: 172
logical_and_expr (118)
    on left: 92 93, on right: 93 95 96
logical_negation_expr (119)
    on left: 94, on right: 192
logical_or_expr (120)
    on left: 95 96, on right: 38 39 96
multiplicative_expr (121)
    on left: 97 98, on right: 3 4 98
mult_op (122)
    on left: 99 100 101, on right: 98
named_label (123)
    on left: 102, on right: 76 90
null_statement (124)
    on left: 103, on right: 180
parameter_decl (125)
    on left: 104 105, on right: 129 130
abstract_declarator_opt (126)
    on left: 106 107, on right: 105 186
character_constant (127)
    on left: 108, on right: 43
constant_expr_opt (128)
    on left: 109 110, on right: 8 56
declaration_or_statement_list_opt (129)
    on left: 111 112, on right: 37
declaration_specifiers_opt (130)
    on left: 113 114, on right: 75
direct_abstract_declarator_opt (131)
    on left: 115 116, on right: 56
expr_opt (132)
    on left: 117 118, on right: 70 154
expression_list_opt (133)
    on left: 119 120, on right: 72
initial_clause_opt (134)
    on left: 121 122, on right: 70
int_t_opt (135)
    on left: 123 124, on right: 200 201 202
integer_constant (136)
    on left: 125, on right: 42
pointer_opt (137)
    on left: 126 127, on right: 2
string_constant (138)
    on left: 128, on right: 44
parameter_list (139)
    on left: 129 130, on right: 130 131
parameter_type_list (140)
    on left: 131, on right: 73
parenthesized_expr (141)
    on left: 132, on right: 147
pointer (142)
    on left: 133 134, on right: 1 127 134 135
pointer_declarator (143)
    on left: 135, on right: 53
postdecrement_expr (144)
    on left: 136, on right: 141
postfix_expr (145)
    on left: 137 138 139 140 141, on right: 72 136 142 181 189
postincrement_expr (146)
    on left: 142, on right: 140
predecrement_expr (147)
    on left: 143, on right: 197
preincrement_expr (148)
    on left: 144, on right: 196
primary_expr (149)
    on left: 145 146 147, on right: 137
relational_expr (150)
    on left: 148 149, on right: 62 63 149
relational_op (151)
    on left: 150 151 152 153, on right: 149
return_statement (152)
    on left: 154, on right: 178
shift_expr (153)
    on left: 155 156, on right: 148 149 156
shift_op (154)
    on left: 157 158, on right: 156
signed_type_specifier (155)
    on left: 159 160 161 162 163 164 165 166 167 168 169, on right:
    84
simple_declarator (156)
    on left: 170, on right: 57
statement (157)
    on left: 171 172 173 174 175 176 177 178 179 180, on right: 49
    61 71 77 78 91 204
subscript_expr (158)
    on left: 181, on right: 138
top_level_decl (159)
    on left: 182 183, on right: 184 185
translation_unit (160)
    on left: 184 185, on right: 0 185
type_name (161)
    on left: 186, on right: 31
type_specifier (162)
    on left: 187 188, on right: 52
unary_expr (163)
    on left: 189 190 191 192 193 194 195 196 197, on right: 10 30 143
    144
unary_minus_expr (164)
    on left: 198, on right: 190
unary_plus_expr (165)
    on left: 199, on right: 191
unsigned_type_specifier (166)
    on left: 200 201 202, on right: 85
void_type_specifier (167)
    on left: 203, on right: 188
while_statement (168)
    on left: 204, on right: 87


state 0

    0 $accept: . translation_unit $end

    CHAR      shift, and go to state 1
    INT       shift, and go to state 2
    LONG      shift, and go to state 3
    SHORT     shift, and go to state 4
    SIGNED    shift, and go to state 5
    UNSIGNED  shift, and go to state 6
    VOID      shift, and go to state 7

    $default  reduce using rule 113 (declaration_specifiers_opt)

    character_type_specifier    go to state 8
    decl                        go to state 9
    declaration_specifiers      go to state 10
    function_definition         go to state 11
    function_def_specifier      go to state 12
    integer_type_specifier      go to state 13
    declaration_specifiers_opt  go to state 14
    signed_type_specifier       go to state 15
    top_level_decl              go to state 16
    translation_unit            go to state 17
    type_specifier              go to state 18
    unsigned_type_specifier     go to state 19
    void_type_specifier         go to state 20


state 1

   32 character_type_specifier: CHAR .

    $default  reduce using rule 32 (character_type_specifier)


state 2

  163 signed_type_specifier: INT .

    $default  reduce using rule 163 (signed_type_specifier)


state 3

  166 signed_type_specifier: LONG .
  167                      | LONG . INT

    INT  shift, and go to state 21

    $default  reduce using rule 166 (signed_type_specifier)


state 4

  159 signed_type_specifier: SHORT .
  160                      | SHORT . INT

    INT  shift, and go to state 22

    $default  reduce using rule 159 (signed_type_specifier)


state 5

   33 character_type_specifier: SIGNED . CHAR
  161 signed_type_specifier: SIGNED . SHORT
  162                      | SIGNED . SHORT INT
  164                      | SIGNED . INT
  165                      | SIGNED .
  168                      | SIGNED . LONG
  169                      | SIGNED . LONG INT

    CHAR   shift, and go to state 23
    INT    shift, and go to state 24
    LONG   shift, and go to state 25
    SHORT  shift, and go to state 26

    $default  reduce using rule 165 (signed_type_specifier)


state 6

   34 character_type_specifier: UNSIGNED . CHAR
  200 unsigned_type_specifier: UNSIGNED . SHORT int_t_opt
  201                        | UNSIGNED . int_t_opt
  202                        | UNSIGNED . LONG int_t_opt

    CHAR   shift, and go to state 27
    INT    shift, and go to state 28
    LONG   shift, and go to state 29
    SHORT  shift, and go to state 30

    $default  reduce using rule 123 (int_t_opt)

    int_t_opt  go to state 31


state 7

  203 void_type_specifier: VOID .

    $default  reduce using rule 203 (void_type_specifier)


state 8

   86 integer_type_specifier: character_type_specifier .

    $default  reduce using rule 86 (integer_type_specifier)


state 9

  182 top_level_decl: decl .

    $default  reduce using rule 182 (top_level_decl)


state 10

   47 decl: declaration_specifiers . initialized_declarator_list SEMICOLON
  114 declaration_specifiers_opt: declaration_specifiers .

    IDENTIFIER  shift, and go to state 32
    LEFT_PAREN  shift, and go to state 33
    ASTERISK    shift, and go to state 34

    IDENTIFIER  [reduce using rule 114 (declaration_specifiers_opt)]
    LEFT_PAREN  [reduce using rule 114 (declaration_specifiers_opt)]
    ASTERISK    [reduce using rule 114 (declaration_specifiers_opt)]

    array_declarator             go to state 35
    declarator                   go to state 36
    direct_declarator            go to state 37
    function_declarator          go to state 38
    initialized_declarator       go to state 39
    initialized_declarator_list  go to state 40
    pointer                      go to state 41
    pointer_declarator           go to state 42
    simple_declarator            go to state 43


state 11

  183 top_level_decl: function_definition .

    $default  reduce using rule 183 (top_level_decl)


state 12

   74 function_definition: function_def_specifier . compound_statement

    LEFT_CURLY  shift, and go to state 44

    compound_statement  go to state 45


state 13

  187 type_specifier: integer_type_specifier .

    $default  reduce using rule 187 (type_specifier)


state 14

   75 function_def_specifier: declaration_specifiers_opt . declarator

    IDENTIFIER  shift, and go to state 32
    LEFT_PAREN  shift, and go to state 33
    ASTERISK    shift, and go to state 34

    array_declarator     go to state 35
    declarator           go to state 46
    direct_declarator    go to state 37
    function_declarator  go to state 38
    pointer              go to state 41
    pointer_declarator   go to state 42
    simple_declarator    go to state 43


state 15

   84 integer_type_specifier: signed_type_specifier .

    $default  reduce using rule 84 (integer_type_specifier)


state 16

  184 translation_unit: top_level_decl .

    $default  reduce using rule 184 (translation_unit)


state 17

    0 $accept: translation_unit . $end
  185 translation_unit: translation_unit . top_level_decl

    $end      shift, and go to state 47
    CHAR      shift, and go to state 1
    INT       shift, and go to state 2
    LONG      shift, and go to state 3
    SHORT     shift, and go to state 4
    SIGNED    shift, and go to state 5
    UNSIGNED  shift, and go to state 6
    VOID      shift, and go to state 7

    $default  reduce using rule 113 (declaration_specifiers_opt)
